# socket-io_practice

./: Home.html  pyproject.toml  readme
app/: main.py  room.py
app/socket_logics/: __init__.py  notification.py  room.py
ui/: home.html  room.html  socket_docs.html
